initialize project (JWT, spring security, Exception)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/notification
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username= postgres
-spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.show-sql=true 
+spring.datasource.url=jdbc:postgresql://localhost:5432/notification?createDatabaseIfNotExist=true
+spring.datasource.username=postgres
+spring.datasource.password=f806320620427ebb51f389421347194a080818a8
+spring.application.name=notification
+logging.level.org.springframework.web:DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.show-sql=true
