--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:13
     network_mode: bridge
     container_name: postgres
     volumes:
@@ -11,15 +11,26 @@ services:
     ports:
       - 5432:5432
     environment:
-         - POSTGRES_PASSWORD=admin
-         - POSTGRES_USER=postgres
+         - POSTGRES_PASSWORD=root
+         - POSTGRES_USER=db_user
          - POSTGRES_DB=notification
     restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile
+  rabbitmq:
+  image: rabbitmq:management
+  ports:
+    - "5672:5672" #JMS Port
+    - "15672:15672" #Management Port - default user:pass = guest:guest
 # APP*****************************************
   springbootapp:
     image: springbootapp:latest
     network_mode: bridge
     container_name: springbootapp
+    build:
+      context: .
+      dockerfile: Dockerfile
     expose:
       - 8080
     ports:
@@ -31,3 +42,4 @@ services:
       - postgres
 volumes:
   postgres-data:
+  
