--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.7.0</version>
         </dependency>
+        <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-devtools</artifactId>
+		    <version>2.3.4.RELEASE</version>
+		</dependency>
     </dependencies>
 	<build>
 	    <plugins>
