--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
 		    <artifactId>spring-boot-devtools</artifactId>
 		    <version>2.3.4.RELEASE</version>
 		</dependency>
+				<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
     </dependencies>
 	<build>
 	    <plugins>
